# VecMath

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  deploy.sh  hashmap.json  index.html  package-lock.json  package.json
.github/workflows/: build.yml  builddocs.yml
VecMathCommon/antlr4/: VecMathLexer.g4  VecMathParser.g4
VecMathCommon/resources/: help.txt  jokes.txt
VecMathREPLCpp/: CMakeLists.txt  buildwindows.bat
VecMathREPLCpp/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
VecMathREPLCpp/main/: CMakeLists.txt  FValue.cpp  IMatrix.cpp  IMatrix.h  Quaternion.cpp  Quaternion.h  Scalar.cpp  Scalar.h  VecMathErrorListener.h  VecMathListener.cpp  VecMathListener.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  compile.bat  main.cpp
VecMathREPLCpp/main/grammar/: VecMathLexer.g4  VecMathParser.g4
VecMathREPLCpp/main/resources/: help.txt  jokes.txt
VecMathREPLCpp/resources/: License.txt
VecMathREPLCpp/unittests/: AssignmentTests.h  CMakeLists.txt  TestUtil.h  UnitTestComplex.h  UnitTestConstants.h  UnitTestFunctions.h  UnitTestMain.cpp  UnitTestMemory.h  UnitTestOperator.h  UnitTestQuaternion.h  UnitTestVector.h
VecMathREPLCpp/vecmathhtml/: CMakeLists.txt  VecMathHtmlWithScript.html  main.cpp  vecmath.html
VecMathREPLCpp/vecmathhtml/site/: index.html
VecMathREPLCpp/vecmathhtml/site/css/: cli.css
VecMathREPLCpp/vecmathhtml/site/script/: console.js
VecMathREPLCpp/vecmathlib/: CMakeLists.txt  Complex.cpp  Complex.h  Console.cpp  Console.h  FValue.h  IMatrix.cpp  IMatrix.h  Joke.cpp  Joke.h  JokeGenerator.cpp  JokeGenerator.h  Quaternion.cpp  Quaternion.h  Scalar.cpp  Scalar.h  VecMathErrorListener.cpp  VecMathListener.cpp  VecMathListener.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  main.cpp
VecMathREPLCpp/vecmathlib/grammar/: VecMathLexer.g4  VecMathParser.g4
VecMathREPLCpp/vecmathlib/resources/: help.txt
VecMathREPLCpp/vecmathmain/: CMakeLists.txt  main.cpp
VecMathREPLJava/: nbactions.xml  pom.xml
VecMathREPLRust/: Cargo.toml
VecMathREPLRust/src/: main.rs
VecMathREPLRust/src/evaluation/: functions.rs  mod.rs
VecMathREPLRust/src/parser/: expression.rs  mod.rs  spanned.rs  statement.rs
assets/: index.md.566a0d67.js  index.md.566a0d67.lean.js  index.md.ce76de91.js  index.md.ce76de91.lean.js  introduction_commands_commands.md.16308b81.js  introduction_commands_commands.md.16308b81.lean.js  introduction_commands_commands.md.7114379a.js  introduction_commands_commands.md.7114379a.lean.js  introduction_functions_functions.md.d8950ede.js  introduction_functions_functions.md.d8950ede.lean.js  introduction_functions_functions.md.ed6a6499.js  introduction_functions_functions.md.ed6a6499.lean.js  introduction_objectives.md.158a1d18.js  introduction_objectives.md.158a1d18.lean.js  introduction_objectives.md.87d22f57.js  introduction_objectives.md.87d22f57.lean.js  introduction_operators_add.md.36cef8a6.js  introduction_operators_add.md.36cef8a6.lean.js  introduction_operators_add.md.cba8400f.js  introduction_operators_add.md.cba8400f.lean.js  introduction_operators_division.md.df5ab99d.js  introduction_operators_division.md.df5ab99d.lean.js  introduction_operators_division.md.e0a33a74.js  introduction_operators_division.md.e0a33a74.lean.js  introduction_operators_dotproduct.md.8c485b0a.js  introduction_operators_dotproduct.md.8c485b0a.lean.js  introduction_operators_dotproduct.md.fb200123.js  introduction_operators_dotproduct.md.fb200123.lean.js  introduction_operators_magnitude.md.7d09c8a9.js  introduction_operators_magnitude.md.7d09c8a9.lean.js  introduction_operators_magnitude.md.d3dfa111.js  introduction_operators_magnitude.md.d3dfa111.lean.js  introduction_operators_multiply.md.3040d97e.js  introduction_operators_multiply.md.3040d97e.lean.js  introduction_operators_multiply.md.dffea1aa.js  introduction_operators_multiply.md.dffea1aa.lean.js  introduction_operators_operators.md.78dac595.js  introduction_operators_operators.md.78dac595.lean.js  introduction_operators_operators.md.e9a6658b.js  introduction_operators_operators.md.e9a6658b.lean.js  (+14 more)
docs/: index.md
docs/.vitepress/: config.js  config.ts
docs/docs/: hashmap.json  index.html
docs/docs/assets/: app.2ed2a9a6.js  index.md.de02b253.js  introduction_commands_commands.md.8b87eb88.js  introduction_objectives.md.1193213f.js  (+23 more)
docs/introduction/: objectives.md  overview.md  variables.md
introduction/: objectives.html  overview.html  variables.html
introduction/commands/: commands.html
introduction/functions/: functions.html
introduction/operators/: add.html  division.html  dotproduct.html  magnitude.html  multiply.html  operators.html  power.html  subtract.html
public/: hashmap.json  index.html
public/assets/: app.744777a9.js  index.md.29beffc9.js  index.md.29beffc9.lean.js  introduction_commands_commands.md.44a117fe.js  introduction_commands_commands.md.44a117fe.lean.js  introduction_functions_functions.md.ffd93fd0.js  introduction_functions_functions.md.ffd93fd0.lean.js  introduction_objectives.md.e569e505.js  introduction_objectives.md.e569e505.lean.js  introduction_operators_add.md.5574e592.js  introduction_operators_add.md.5574e592.lean.js  introduction_operators_division.md.8422a682.js  introduction_operators_division.md.8422a682.lean.js  introduction_operators_dotproduct.md.3d63b901.js  introduction_operators_dotproduct.md.3d63b901.lean.js  introduction_operators_magnitude.md.13dee11e.js  introduction_operators_magnitude.md.13dee11e.lean.js  introduction_operators_multiply.md.25397d8d.js  introduction_operators_multiply.md.25397d8d.lean.js  introduction_operators_operators.md.e2b737c2.js  introduction_operators_operators.md.e2b737c2.lean.js  introduction_operators_power.md.7b5c305b.js  introduction_operators_power.md.7b5c305b.lean.js  introduction_operators_subtract.md.2ed1034f.js  introduction_operators_subtract.md.2ed1034f.lean.js  introduction_overview.md.16330ed7.js  introduction_variables.md.8f877b01.js  introduction_variables.md.8f877b01.lean.js
public/introduction/: objectives.html  overview.html  variables.html
(+59 files in other folders)
